infra/system/argocd/overlays/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    istio-injection: disabled # FIXME: Re-enable once istio->kubeapi netpols work.
