infra/system/argocd/overlays/argocd-server.yaml
# env was added because of https://github.com/argoproj/argo-cd/issues/3572 error
# ref: https://argo-cd.readthedocs.io/en/stable/operator-manual/ingress/#istio
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: argocd-server
spec:
 template:
   spec:
     containers:
     - args:
       - /usr/local/bin/argocd-server
       - --staticassets
       - /shared/app
       - --redis
       - argocd-redis:6379
       - --insecure
       - --basehref
       - /argocd
       - --rootpath
       - /argocd
       name: argocd-server
